--- a/src/main/resources/fileXML/mainGame/productionMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/productionMainGame.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="provaMainGame.ProductionController">
+<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.maingame.ProductionController">
     <children>
         <Pane layoutX="28.0" layoutY="26.0" prefHeight="466.0" prefWidth="805.0">
          <children>
@@ -21,12 +21,12 @@
                <children>
                   <ImageView fitHeight="233.0" fitWidth="802.0">
                      <image>
-                        <Image url="@../images/produzione3Giocatori.png" />
+                        <Image url="/images/produzione3Giocatori.png" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="233.0" fitWidth="801.0">
                      <image>
-                        <Image url="@../images/boardBuilding.png" />
+                        <Image url="/images/boardBuilding.png" />
                      </image>
                   </ImageView>
                </children>
@@ -40,7 +40,7 @@
 
                     <ImageView fitHeight="516.0" fitWidth="863.0">
             <image>
-                <Image url="@../images/cornici/cornice18x27.png" />
+                <Image url="/images/cornici/cornice18x27.png" />
             </image>
         </ImageView>
       <ImageView fx:id="buildingCard0" fitHeight="187.0" fitWidth="120.0" layoutX="36.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#selectBuildingCard0"/>
@@ -54,7 +54,7 @@
             <children>
             <ImageView fitHeight="653.0" fitWidth="159.0" layoutX="-4.0" opacity="0.58">
                <image>
-                  <Image url="@../images/finestra.png" />
+                  <Image url="/images/finestra.png" />
                </image>
             </ImageView>
                 <VBox alignment="TOP_CENTER" layoutY="92.0" prefHeight="496.0" prefWidth="159.0" spacing="8.0">
@@ -77,14 +77,14 @@
         </Pane>
         <ImageView fitHeight="713.0" fitWidth="218.0" layoutX="857.0">
             <image>
-                <Image url="@../images/cornici/cornice5x27.png" />
+                <Image url="/images/cornici/cornice5x27.png" />
             </image>
         </ImageView>
         <Pane layoutX="33.0" layoutY="543.0" prefHeight="361.0" prefWidth="801.0">
             <children>
             <ImageView fitHeight="361.0" fitWidth="218.0" layoutX="578.0" layoutY="-2.0" opacity="0.58">
                <image>
-                  <Image url="@../images/finestra.png" />
+                  <Image url="/images/finestra.png" />
                </image>
             </ImageView>
                 <SplitPane dividerPositions="0.9080779944289693" orientation="VERTICAL" prefHeight="361.0" prefWidth="363.0">
@@ -116,7 +116,7 @@
                 </SplitPane>
             <ImageView fitHeight="361.0" fitWidth="218.0" layoutX="362.0" opacity="0.58">
                <image>
-                  <Image url="@../images/finestra.png" />
+                  <Image url="/images/finestra.png" />
                </image>
             </ImageView>
                 <VBox layoutX="363.0" prefHeight="361.0" prefWidth="215.0">
@@ -193,7 +193,7 @@
         </Pane>
         <ImageView fitHeight="412.0" fitWidth="860.0" layoutY="516.0">
             <image>
-                <Image url="@../images/cornici/cornice14x27.png" />
+                <Image url="/images/cornici/cornice14x27.png" />
             </image>
         </ImageView>
       <ImageView fx:id="LorenzoMagnifico" fitHeight="215.0" fitWidth="215.0" layoutX="860.0" layoutY="713.0" pickOnBounds="true" preserveRatio="true">
