--- a/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
@@ -12,16 +12,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="provaMainGame.PersonalBoardController">
+<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.maingame.PersonalBoardController">
    <children>
       <ImageView fitHeight="861.0" fitWidth="589.0" layoutX="35.0" layoutY="31.0">
          <image>
-            <Image url="@../images/board4carte-iloveimg-resized.png" />
+            <Image url="/images/board4carte-iloveimg-resized.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="923.0" fitWidth="648.0">
          <image>
-            <Image url="@../images/cornici/ritaglioCornice.png" />
+            <Image url="/images/cornici/ritaglioCornice.png" />
          </image>
       </ImageView>
       <HBox fx:id="territoryCard" layoutX="41.0" layoutY="605.0" prefHeight="182.0" prefWidth="568.0" spacing="12.0">
@@ -92,14 +92,14 @@
          <children>
             <ImageView fitHeight="549.0" fitWidth="361.0" opacity="0.72">
                <image>
-                  <Image url="@../images/finestraPiccola.png" />
+                  <Image url="/images/finestraPiccola.png" />
                </image>
             </ImageView>
             <VBox alignment="BOTTOM_LEFT" prefHeight="861.0" prefWidth="363.0">
                <children>
                   <ImageView fitHeight="550.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/risorse/bonusTile1.png" />
+                        <Image url="/images/risorse/bonusTile1.png" />
                      </image>
                   </ImageView>
                   <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#goBack" prefHeight="78.0" prefWidth="363.0" text="go back">
@@ -150,7 +150,7 @@
       </Pane>
       <ImageView fitHeight="923.0" fitWidth="422.0" layoutX="648.0">
          <image>
-            <Image url="@../images/cornici/ritaglioCornice10Quadretti.png" />
+            <Image url="/images/cornici/ritaglioCornice10Quadretti.png" />
          </image>
       </ImageView>
    </children>
