--- a/src/main/resources/fileXML/mainGame/rootLayout.fxml
+++ b/src/main/resources/fileXML/mainGame/rootLayout.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 
 
 <BorderPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-    <!-- TODO Add Nodes -->
+   <center>
+      <ImageView fitHeight="923.0" fitWidth="1070.0"  BorderPane.alignment="CENTER">
+         <image>
+            <Image url="@../../images/starImage.png" />
+         </image>
+      </ImageView>
+   </center>
 </BorderPane>
