--- a/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.maingame.PersonalBoardController">
+<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.PersonalBoardController">
    <children>
       <ImageView fitHeight="861.0" fitWidth="589.0" layoutX="35.0" layoutY="31.0">
          <image>
