--- a/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.maingame.HarvesterController">
+<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.HarvesterController">
     <children>
 
         <ImageView fitHeight="516.0" fitWidth="863.0">
