--- a/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
@@ -26,7 +26,7 @@
             <children>
                 <VBox prefHeight="466.0" prefWidth="805.0">
                     <children>
-                        <ImageView fitHeight="233.0" fitWidth="802.0">
+                        <ImageView fx:id="harvesterZoneImage" fitHeight="233.0" fitWidth="802.0">
                             <image>
                                 <Image url="/images/raccolto3Giocatori.png" />
                             </image>
