--- a/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/harvesterMainGame.fxml
@@ -38,18 +38,17 @@
                         </ImageView>
                     </children>
                 </VBox>
-                <ImageView fx:id="imageHarvester0" fitHeight="86.0" fitWidth="94.0" layoutX="49.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnHarvester0"/>
-                <ImageView fx:id="imageHarvester1" fitHeight="86.0" fitWidth="94.0" layoutX="260.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnHarvester1"/>
-                <ImageView fx:id="imageHarvester2" fitHeight="86.0" fitWidth="94.0" layoutX="373.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnHarvester2"/>
-                <ImageView fx:id="imageHarvester3" fitHeight="86.0" fitWidth="94.0" layoutX="480.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnHarvester3"/>
+                <ImageView fx:id="imageHarvester0" fitHeight="86.0" fitWidth="94.0" layoutX="49.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="buttonPlaceFamiliar" layoutX="63.0" layoutY="30.0" mnemonicParsing="false" onAction="#placeFamiliar" prefHeight="187.0" prefWidth="660.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
+            <HBox fx:id="familiarBox" alignment="CENTER" layoutX="236.0" layoutY="51.0" prefHeight="135.0" prefWidth="460.0" />
               </children>
         </Pane>
-        <ImageView fx:id="territoryCard0" fitHeight="187.0" fitWidth="120.0" layoutX="36.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard0"/>
-        <ImageView fx:id="territoryCard1" fitHeight="187.0" fitWidth="120.0" layoutX="167.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard1"/>
-        <ImageView fx:id="territoryCard2" fitHeight="187.0" fitWidth="120.0" layoutX="300.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard2"/>
-        <ImageView fx:id="territoryCard3" fitHeight="187.0" fitWidth="120.0" layoutX="434.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard3"/>
-        <ImageView fx:id="territoryCard4" fitHeight="187.0" fitWidth="120.0" layoutX="565.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard4"/>
-        <ImageView fx:id="territoryCard5" fitHeight="187.0" fitWidth="120.0" layoutX="697.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#zoomTerritoryCard5"/>
+        <ImageView fx:id="territoryCard0" fitHeight="187.0" fitWidth="120.0" layoutX="36.0" layoutY="281.0" onMouseClicked="#zoomTerritoryCard0" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="territoryCard1" fitHeight="187.0" fitWidth="120.0" layoutX="167.0" layoutY="278.0" onMouseClicked="#zoomTerritoryCard1" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="territoryCard2" fitHeight="187.0" fitWidth="120.0" layoutX="300.0" layoutY="277.0" onMouseClicked="#zoomTerritoryCard2" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="territoryCard3" fitHeight="187.0" fitWidth="120.0" layoutX="434.0" layoutY="277.0" onMouseClicked="#zoomTerritoryCard3" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="territoryCard4" fitHeight="187.0" fitWidth="120.0" layoutX="565.0" layoutY="277.0" onMouseClicked="#zoomTerritoryCard4" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="territoryCard5" fitHeight="187.0" fitWidth="120.0" layoutX="697.0" layoutY="277.0" onMouseClicked="#zoomTerritoryCard5" pickOnBounds="true" preserveRatio="true" />
         <Pane layoutX="886.0" layoutY="32.0" prefHeight="653.0" prefWidth="159.0">
             <children>
                 <ImageView fitHeight="653.0" fitWidth="159.0" layoutX="-4.0" opacity="0.58">
@@ -70,7 +69,7 @@
                         <ImageView fx:id="imageFamiliarWhite" fitHeight="86.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true" />
                         <RadioButton fx:id="familiarBlack" mnemonicParsing="false" onAction="#familiarBlackChosen" toggleGroup="$familiar" />
                         <ImageView fx:id="imageFamiliarOrange" fitHeight="86.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true" />
-                        <RadioButton fx:id="familiarNull" mnemonicParsing="false" onAction="#familiarNullChosen" selected="true" toggleGroup="$familiar" />
+                        <RadioButton fx:id="familiarNull" mnemonicParsing="false" onAction="#familiarNullChosen"  toggleGroup="$familiar" />
                     </children>
                 </VBox>
             </children>
