--- a/src/main/resources/fileXML/mainGame/cardZoom.fxml
+++ b/src/main/resources/fileXML/mainGame/cardZoom.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="367.0" prefWidth="227.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.cardZoomController">
+<AnchorPane prefHeight="417.0" prefWidth="227.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.cardZoomController">
    <children>
       <ImageView fx:id="imageView" fitHeight="367.0" fitWidth="227.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="exit" layoutY="367.0" mnemonicParsing="false" onAction="#close" prefHeight="50.0" prefWidth="227.0" text="CLOSE">
+         <font>
+            <Font name="Lucida Blackletter" size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
