--- a/src/main/resources/fileXML/mainGame/marketMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/marketMainGame.fxml
@@ -17,10 +17,7 @@
     <children>
         <Pane layoutX="28.0" layoutY="26.0" prefHeight="466.0" prefWidth="805.0">
             <children>
-                        <ImageView fitHeight="466.0" fitWidth="802.0">
-                            <image>
-                                <Image url="/images/mercato2Giocatori.png" />
-                            </image>
+                        <ImageView fx:id="market" fitHeight="466.0" fitWidth="802.0">
                         </ImageView>
                 <ImageView fx:id="imageMarket0" fitHeight="86.0" fitWidth="94.0" layoutX="260.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnMarket0"/>
                 <ImageView fx:id="imageMarket1" fitHeight="86.0" fitWidth="94.0" layoutX="412.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#placeFamiliarOnMarket1"/>
